# skinny-glms

./: .gitignore  LICENSE  Makefile  README  README.md  pyproject.toml  skinny_binomial.py  skinny_gamma.py  skinny_lm.py  skinny_poisson.py  speed_comparison.csv  utils.py
examples/: binomial_example.py  gamma_example.py  gaussian_example.py  poisson_example.py  poisson_offset_example.py  speed_comparison.csv  statsmodels_speed_comparison.py  sum_of_gammas_example.py  sum_of_normals_example.py
skinnyglms/: families.py  functions.py  glm.py  links.py
speed_tests/: profile_irls.prof  profile_irls.py  sklearn_speed_test.py  statsmodels_speed_test.py
src/: binomial_example.py  families.py  functions.py  gamma_example.py  gaussian_example.py  links.py  poisson_example.py  skinny_glm.py
src/skinnyglms/: __init__.py  families.py  functions.cp39-win_amd64.pyd  functions.py  functions_source.py  glm.py  links.py
src/skinnyglms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/skinnyglms/mappings/: sklearn.py  statsmodels.py
tests/: statsmodels_speed_comparison.py  test_binomial_family.py  test_gamma.py  test_gamma_family.py  test_gaussian_family.py  test_poisson_family.py  test_statsmodels_agreement.py  test_statsmodels_family_and_link_functions.py  test_statsmodels_fits.py  utils.py
